# FileEncryptorTool

./: CMakeLists.txt  MainApp.cpp  MainApp.h  fileEncryptor.cpp  fileEncryptor.h  main.cpp  readme.md
qml/: MainWindow.qml
